Day 13. Still playing around with CSS. Added tiny server

--- a/views/gestureView.html
+++ b/views/gestureView.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -209,6 +209,6 @@
     </div>
 
 
-    <script src="scripts/timer.js"></script>
+    <script src="timer.js"></script>
   </body>
 </html>
