--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Roboto:wght@100&family=Ubuntu:wght@300&family=Work+Sans:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Roboto:wght@100&family=Ubuntu:wght@300&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
 
@@ -28,7 +28,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="/styles/common.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -39,28 +39,23 @@
 
   <body>
     <!-- NAV BAR-->
-    <div class="nav-heading">
-      <div class="nav-headers">Draw!</div>
-      <div class="nav-sub-header">
-        <div class="nav-links">
-          
-          <!-- Subheading -->
-          <div class="nav-subheading">Practice drawing every day!</div>
+    <div class="nav-wrapper">
+      <div class="nav-headers-wrappers">
+        <div class="nav-main-header">Draw!</div>
+        <div class="nav-subheading">Practice drawing every day!</div>
+      </div>
 
-          <!-- Links for practice -->
-          <div class="sub-links">
-            <div class="home">
-              <i class="fa-solid fa-house"></i>
-              Home
-            </div>
 
-            <div class="learn">
-              <i class="fa-solid fa-chalkboard-user"></i>
-              Learn
-            </div>
-          </div>
+      <!-- Links for practice -->
+      <div class="sub-links">
+        <div class="home">
+          <i class="fa-solid fa-house"></i>
+          Home
+        </div>
 
-          
+        <div class="learn">
+          <i class="fa-solid fa-chalkboard-user"></i>
+          Learn
         </div>
       </div>
     </div>
