--- a/styles/style.css
+++ b/styles/style.css
@@ -22,26 +22,55 @@ body {
 }
 
 
-.nav-heading{
+.nav-wrapper{
   background-color: #809A6F;
   display: flex;
   justify-content: center;
   height: 400px;
   transition: 0.5s;
-  padding-left: 200px;
+  margin-left: 50px;
+  margin-top: 50px;
+  border-radius: 25px;
+  margin-right: 50px;
+  
 }
 
-.nav-heading:hover{
+.nav-wrapper:hover{
   background-color:#CC9C75; 
 }
 
-.nav-heading > .nav-headers {
+.nav-wrapper > .nav-headers-wrappers > .nav-main-header{
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   text-align: center;
   font-size: 10rem;
   color: #D5D8B5;
 }
+
+.nav-wrapper > .nav-headers-wrappers > .nav-subheading{
+
+  font-family: 'Work Sans', sans-serif;
+  margin-top: -20px;
+  margin-left: 12px;
+  color: #D5D8B5; 
+  
+  background-color: #A25B5B;
+  margin-bottom: 50px;
+  font-weight: 1.5rem;
+  text-align: center;
+
+}
+
+.nav-wrapper > .sub-links{
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 900px;
+  margin-top: 135px;
+
+
+
+}
+
+
 
 .nav-heading > .nav-sub-header{
   display:grid;
