Day 15. Setting up some stuff for mongodb database

--- a/views/index.html
+++ b/views/index.html
@@ -82,6 +82,7 @@
     <div class="options">
       <div id="gesture">
         The gesture div
+        <a href="/gesture"> link to gesture page </a>
       </div>
 
       <div id="portrait">
