--- a/views/gestureView.html
+++ b/views/gestureView.html
@@ -33,6 +33,7 @@
     <div class="container">
       <div class="page-headers">
         <h1>How does it work?</h1>
+        <button type="button" onclick="fetchImages()" class="btn btn-primary">Primary</button>
       </div>
 
       <!-- Select timer -->
@@ -197,6 +198,8 @@
         </div>
       </div>
 
+      <button type="button" onclick="getImages()" class="btn btn-primary">Primary</button>
+
       <!-- The modal stuff-->
 
       <div id="myModal" class="modal">
@@ -208,7 +211,7 @@
       </div>
     </div>
 
-
-    <script src="timer.js"></script>
+    <script src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
+    <script src="/timer.js"></script>
   </body>
 </html>
