--- a/views/index.html
+++ b/views/index.html
@@ -21,6 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Roboto:wght@100&family=Ubuntu:wght@300&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
+    <script src="jquery-3.6.0.min.js"></script>
 
     <!-- Font awesome link -->
     <script
