--- a/views/index.html
+++ b/views/index.html
@@ -7,12 +7,6 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap"
-      rel="stylesheet"
-    />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -29,6 +23,7 @@
       crossorigin="anonymous"
     ></script>
 
+    <!-- Style sheets-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="/styles/common.css" />
     <meta charset="UTF-8" />
@@ -84,15 +79,12 @@
       <div id="gesture">
         The gesture div
         <a href="/gesture"> link to gesture page </a>
+        <img src="gesture1.jpg">
       </div>
 
-      <div id="portrait">
-        the portrait div
-      </div>
+      <div id="portrait">the portrait div</div>
 
-      <div id="still-life">
-        the still life 
-      </div>
+      <div id="still-life">the still life</div>
     </div>
   </body>
 </html>
