--- a/styles/style.css
+++ b/styles/style.css
@@ -27,10 +27,10 @@ body {
   background-color: #809A6F;
   display: flex;
   justify-content: center;
-  height: 300px;
+  height: 500px;
   transition: 0.5s;
   /*margin-left: 50px;*/
-  margin-top: 50px;
+  /*margin-top: 50px;*/
   border-radius: 25px;
   /*margin-right: 50px;*/
 }
@@ -44,7 +44,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   text-align: center;
-  font-size: 10rem;
+  font-size: 15rem;
   color: #D5D8B5;
 }
 
