--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ body {
   transition: 0.5s;
   /*margin-left: 50px;*/
   /*margin-top: 50px;*/
-  border-radius: 25px;
+  /*border-radius: 25px;*/
   /*margin-right: 50px;*/
 }
 
@@ -53,7 +53,8 @@ body {
 
   font-family: 'Work Sans', sans-serif;
   margin-top: -20px;
-  margin-left: 12px;
+  margin-left: -15px;
+  margin-right: -30px; 
   color: #D5D8B5; 
   
   background-color: #A25B5B;
