--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Draw!</title>
+    <title>DRAW!</title>
   </head>
 
   <body>
