--- a/views/index.html
+++ b/views/index.html
@@ -74,17 +74,74 @@
         </div>
       </div>
     </div>
+    <!-- Gesture -->
+    <div class="options-wrapper">
+      <div class="block-wrapper" id="gesture">
 
-    <div class="options">
-      <div id="gesture">
-        The gesture div
-        <a href="/gesture"> link to gesture page </a>
-        <img src="gesture1.jpg">
+        <div class="square">
+
+          <div class="block-header" style="background-color: #d5d8b5;">
+            <!-- 
+              Here is where the actual block starts it starts 
+                  with the information
+            -->
+            <div class="block-header-link">
+              <a href="/gesture">Gesture</a>
+            </div>
+            <div class="descriptions">
+              <p>Find the line of action; the flow of the figure.</p>
+            </div>
+            <button href="/gesture" class="practice-button">
+              Practice
+            </button>
+          </div>
+          <div class="block-image">
+            <div class="image-wrapper">
+              <img src="gesture1.jpg" />
+            </div>
+            <div class="quote-wrapper">
+              One must always draw, draw with the eyes, when one cannot draw
+              with a pencil. (Balthus)
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
 
-      <div id="portrait">the portrait div</div>
+    <!-- Portrait -->
+    <div class="options-wrapper">
+      <div class="block-wrapper" id="portrait">
 
-      <div id="still-life">the still life</div>
+        <div class="square">
+
+          <div class="block-image"">
+            <div class="image-wrapper">
+              <img src="portrait1.jpeg" />
+            </div>
+            <div class="quote-wrapper">
+              You can’t do sketches enough. Sketch everything and keep your curiosity fresh. 
+              (Singer)
+            </div>
+          </div>
+
+          <div class="block-header" style="background-color: #cc9c75;">
+            <!-- 
+              Here is where the actual block starts it starts 
+                  with the information
+            -->
+            <div class="block-header-link">
+              <a href="/gesture">Portrait</a>
+            </div>
+            <div class="descriptions">
+              <p>Study the human face</p>
+            </div>
+            <button href="/gesture" class="practice-button">
+              Practice
+            </button>
+          </div>
+          
+        </div>
+      </div>
     </div>
   </body>
 </html>
