Day 18: Have found a descent structure for the html and css

--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
 
     <!-- Style sheets-->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="/styles/common.css" />
+    <link rel="stylesheet" href="common.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -133,13 +133,47 @@
               <a href="/gesture">Portrait</a>
             </div>
             <div class="descriptions">
-              <p>Study the human face</p>
+              <p>Study the structure and beauty of the human face.</p>
             </div>
             <button href="/gesture" class="practice-button">
               Practice
             </button>
           </div>
           
+        </div>
+      </div>
+    </div>
+
+    <!-- Still life -->
+
+    <div class="options-wrapper">
+      <div class="block-wrapper" id="still-life">
+
+        <div class="square">
+
+          <div class="block-header" style="background-color: #809a6f;">
+            <!-- 
+              Here is where the actual block starts it starts 
+                  with the information
+            -->
+            <div class="block-header-link">
+              <a href="/gesture">Still life</a>
+            </div>
+            <div class="descriptions">
+              <p>Practice the understanding of the basic shapes.</p>
+            </div>
+            <button href="/gesture" class="practice-button">
+              Practice
+            </button>
+          </div>
+          <div class="block-image">
+            <div class="image-wrapper">
+              <img src="still-lif.jpeg" />
+            </div>
+            <div class="quote-wrapper">
+              In drawing, nothing is better than the first attempt. (Picasso)
+            </div>
+          </div>
         </div>
       </div>
     </div>
