--- a/styles/style.css
+++ b/styles/style.css
@@ -184,7 +184,8 @@ Options section
 .block-image > .quote-wrapper{
   font-family:'Work Sans', sans-serif; 
   margin-left: -24px;
-  margin-top: 100px; 
+  margin-top: 125px; 
+  margin-right: 50px;
   font-size: 20px;
 }
 
