--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,9 @@
     <!-- Style sheets-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="common.css" />
+    <link rel="stylesheet" href="nav-bar.css" />
+
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -72,6 +75,9 @@
         <div class="option">
           <a href="#still-life"> still lifes </a>
         </div>
+        <div class="option">
+          <a href="/own-set"> your own set</a>
+        </div>
       </div>
     </div>
     <!-- Gesture -->
@@ -86,14 +92,13 @@
                   with the information
             -->
             <div class="block-header-link">
-              <a href="/gesture">Gesture</a>
+              Gesture
             </div>
             <div class="descriptions">
               <p>Find the line of action; the flow of the figure.</p>
             </div>
-            <button href="/gesture" class="practice-button">
-              Practice
-            </button>
+            <a href="/gesture" class="practice-button">Practice</a>
+              
           </div>
           <div class="block-image">
             <div class="image-wrapper">
@@ -130,14 +135,13 @@
                   with the information
             -->
             <div class="block-header-link">
-              <a href="/gesture">Portrait</a>
+              Portrait
             </div>
             <div class="descriptions">
               <p>Study the structure and beauty of the human face.</p>
             </div>
-            <button href="/gesture" class="practice-button">
-              Practice
-            </button>
+            <a href="/gesture" class="practice-button">Practice</a>
+            </a>
           </div>
           
         </div>
@@ -157,14 +161,12 @@
                   with the information
             -->
             <div class="block-header-link">
-              <a href="/gesture">Still life</a>
+              Still life
             </div>
             <div class="descriptions">
               <p>Practice the understanding of the basic shapes.</p>
             </div>
-            <button href="/gesture" class="practice-button">
-              Practice
-            </button>
+            <a href="/gesture" class="practice-button">Practice</a>
           </div>
           <div class="block-image">
             <div class="image-wrapper">
