--- a/styles/style.css
+++ b/styles/style.css
@@ -22,72 +22,6 @@ body {
   font-size: large;
 }
 
-/*#region navigagtion-wrapper*/
-.nav-wrapper {
-  background-color: #809a6f;
-  display: flex;
-  justify-content: center;
-  height: 500px;
-  transition: 0.5s;
-}
-
-.nav-wrapper:hover {
-  background-color: #cc9c75;
-}
-
-.nav-wrapper > .nav-headers-wrappers > .nav-main-header {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
-  text-align: center;
-  font-size: 15rem;
-  color: #d5d8b5;
-}
-
-.nav-wrapper > .nav-headers-wrappers > .nav-subheading {
-  font-family: "Work Sans", sans-serif;
-  margin-top: -20px;
-  margin-left: -15px;
-  margin-right: -30px;
-  color: #d5d8b5;
-
-  background-color: #a25b5b;
-  margin-bottom: 50px;
-  font-weight: 1.5rem;
-  text-align: center;
-  transition: 0.3s;
-}
-
-.nav-wrapper > .sub-links {
-  font-family: "Work Sans", sans-serif;
-  font-weight: 900px;
-  margin-top: 135px;
-}
-
-.nav-wrapper > .sub-links > .home a {
-  text-decoration: none;
-  color: #d5d8b5;
-  transition: 0.3s;
-}
-
-.nav-wrapper > .sub-links > .home > .highlight:hover {
-  color: #a25b5b;
-}
-
-.nav-wrapper > .sub-links > .learn a {
-  text-decoration: none;
-  color: #d5d8b5;
-  transition: 0.3s;
-}
-
-.nav-wrapper > .sub-links > .learn > .highlight:hover {
-  color: #a25b5b;
-}
-
-.nav-heading > .nav-sub-header {
-  display: grid;
-  grid-template-columns: 1fr;
-}
-
 /**
 * Practice content Styles
 */
@@ -149,7 +83,7 @@ Options section
   border: #cc9c75 1px solid;
 }
 
-.square > .block-header a {
+  .square > .block-header > .block-header-link {
   font-family: "Montserrat", sans-serif;
   text-decoration: none;
   font-size: 5rem;
@@ -159,20 +93,20 @@ Options section
 }
 
 .square > .block-header > .practice-button {
+  font-family: 'Work Sans', sans-serif;
   background-color: #a25b5b;
   color:#d5d8b5; 
-  height: 50px;
+
   border:none;
-  
+  text-decoration: none;
   width: 150px;
+  text-align: center;
+ 
+
 }
 
 .square > .block-image{
   border: #cc9c75 1px solid;
-}
-
-.square > .block-header a:hover {
-  color:#a25b5b
 }
 
 .square > .block-image{
@@ -188,8 +122,6 @@ Options section
   margin-right: 50px;
   font-size: 20px;
 }
-
-
 
 .select {
   color: mediumseagreen;
@@ -207,64 +139,4 @@ img {
   background-size: contain;
 }
 
-/* Modal CSS */
 
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
-  background-size: contain;
-
-  background-position: center;
-
-  min-height: 100%;
-  max-height: 100%;
-  background-repeat: no-repeat;
-
-  margin-bottom: 300px;
-}
-
-.timer-banner {
-  height: 26px;
-  width: 100%;
-  background-color: gray;
-  position: absolute;
-  bottom: 6px;
-  left: -3px;
-  opacity: 0.5;
-}
-
-.timer-banner > .timer-banner-text {
-  text-align: center;
-  color: white;
-}
-
-.modal-content {
-  margin: auto;
-  display: block;
-  width: 100%;
-  max-width: 700px;
-}
-
-/* The Close Button */
-.close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.close:hover {
-  cursor: pointer;
-}
