--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,6 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Roboto:wght@100&family=Ubuntu:wght@300&family=Work+Sans&display=swap"
       rel="stylesheet"
     />
-    <script src="jquery-3.6.0.min.js"></script>
 
     <!-- Font awesome link -->
     <script
@@ -76,7 +75,7 @@
           <a href="#still-life"> still lifes </a>
         </div>
         <div class="option">
-          <a href="/own-set"> your own set</a>
+          <a href="/own-setP"> your own set</a>
         </div>
       </div>
     </div>
