--- a/views/gestureView.html
+++ b/views/gestureView.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="user-selections.css"/>
     <link rel="stylesheet" href="common.css"/>
+    <link rel="stylesheet" href="practice-page-styles.css"/>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -44,35 +45,29 @@
         How does it work?
       </div>
 
-      <div class="page-links">
-        <div class="home">
-          <a class="highlight" href="/">
-            <i class="fa-solid fa-house"></i>
-            Home
-          </a>
-        </div>
+      <div class="page-links-wrapper">
+        <div class="sub-links">
 
-        <div class="learn">
-          <a class="highlight" href="#">
-            <i class="fa-solid fa-chalkboard-user"></i>
-            Learn
-          </a>
+          <div class="home">
+            <a class="highlight" href="/">
+              <i class="fa-solid fa-house"></i>
+              Home
+            </a>
+          </div>
+  
+          <div class="learn">
+            <a class="highlight" href="#">
+              <i class="fa-solid fa-chalkboard-user"></i>
+              Learn
+            </a>
+          </div>
+
         </div>
+        
       </div>
 
     </div>
-      
-
-      
-
-
-
-      <!-- Select timer -->
-
-      <div>
-        <hr />
-      </div>
-
+      <div class="spacing"></div>
       <div class="user-selections-wrapper">
 
         <div class="user-time-selection">
