--- a/views/index.html
+++ b/views/index.html
@@ -75,7 +75,7 @@
           <a href="#still-life"> still lifes </a>
         </div>
         <div class="option">
-          <a href="/own-setP"> your own set</a>
+          <a href="/own-set"> your own set</a>
         </div>
       </div>
     </div>
