Day 22. Am I close?

--- a/views/gestureView.html
+++ b/views/gestureView.html
@@ -37,7 +37,12 @@
   </head>
 
   <!-- Body starts -->
-  <body onload="fetchImages()">
+  <body onload="fetchImages(q)">
+
+    <script>
+      var q = sessionStorage.getItem('query');
+      alert(q);
+    </script>
 
     <div class="practice-header-wrapper">
 
