Day 22: Reaching the finish line

--- a/views/gestureView.html
+++ b/views/gestureView.html
@@ -41,13 +41,12 @@
 
     <script>
       var q = sessionStorage.getItem('query');
-      alert(q);
     </script>
 
     <div class="practice-header-wrapper">
 
       <div class="page-header">
-        How does it work?
+        Practice
       </div>
 
       <div class="page-links-wrapper">
@@ -68,7 +67,6 @@
           </div>
 
         </div>
-        
       </div>
 
     </div>
